Emissão de nfce. Falha
Signed-off-by: Erinaldo Henrique <hencomjesus@hotmail.com>